syntax = "proto3";

package listings;
option go_package = "./proto;listings";

import "google/protobuf/field_mask.proto";
import "content.proto";

message Owner {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string company = 5;
  string user_ref = 6;
}

// Service Methods
message CreateOwnerRequest {
  Owner owner = 1;
}

message GetOwnerRequest {
  int32 id = 1;
}

message UpdateOwnerRequest {
  int32 id = 1;
  Owner owner = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeleteOwnerRequest {
  int32 id = 1;
}

message ListOwnerRequest {}

message ListOwnerResponse {
  repeated Owner owners = 1;
}

message DeleteOwnerResponse {
  STATUS status = 1;
  Owner owner = 2;
}