syntax = "proto3";

package auth;
option go_package = "./proto;users";

import "usertypes.proto";
import "google/protobuf/field_mask.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUserRequest {}

message ListUserResponse {
  repeated User users = 1;
}

message DeleteUserResponse {
  STATUS status = 1;
  User user = 2;
}