syntax = "proto3";

package auth;
option go_package = "./proto;users";

message RealtorMetadata {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string company = 5;
}

message OwnerMetadata {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string company = 5;
}

message AdminMetadata {}

message RenterMetadata {}
